// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 0 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        0
      </span>
       
       expenses 
       totalling 
      <span>
        $0.00
      </span>
    </h1>
    <p
      className="page-header__subtitle"
    >
      All expenses shown
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary btn--shine"
        to="/create"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       
       expenses 
       totalling 
      <span>
        $9.99
      </span>
    </h1>
    <p
      className="page-header__subtitle"
    >
      All expenses shown
    </p>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn btn--primary btn--shine"
        to="/create"
      >
        Add expense
      </Link>
    </div>
  </div>
</div>
`;
